fix: remove overflow x from body

--- a/style.css
+++ b/style.css
@@ -604,20 +604,12 @@ button > span {
 @media screen and (max-width: 900px) {
 
   html {
+    overflow-x: hidden;
     font-size: 14px;
   }
 
   body.menuActive {
     overflow: hidden;
-    scroll-snap-stop:always;
-  }
-
-  body {
-    overflow-x: hidden;
-  }
-
-  header > div > section  {
-    width: 42px;
   }
 
   .home {
@@ -682,7 +674,6 @@ button > span {
     top: 0;
     height: 100vh;
     width: 100vw;
-
 
     justify-content: center;
     align-items: center;
